--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,9 @@ matrix:
      - os: linux
        compiler: clang
        env: NODE_VERSION="10"
+     - os: linux
+       compiler: clang
+       env: NODE_VERSION="12"
      # OS X
      - os: osx
        osx_image: xcode8
@@ -62,6 +65,10 @@ matrix:
        osx_image: xcode8
        compiler: clang
        env: NODE_VERSION="10"
+     - os: osx
+       osx_image: xcode8
+       compiler: clang
+       env: NODE_VERSION="12"
 
 env:
   global:
